<resources>
    <string name="app_name">家庭卫士</string>
    <string name="please_select_item">请选择</string>
    <string name="take_photoes">拍照</string>
    <string name="select_from_local">从图库选择</string>
    <string name="sys_network_error">网络不可用</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_more_label">加载更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">数据加载中&#8230;&#8230;</string>
    <string name="pull_to_refresh_tap_label">触摸下拉刷新</string>
    <string name="network_error">服务器异常&#044;请稍后重试！</string>
    <string name="no_data">没有数据！</string>
    <string name="get_data_failure">信息获取失败</string>
    <string name="request_failure">请求失败！</string>
    <string name="no_more_data_to_load">没有数据可以加载！</string>
    <string name="back_to_exit_app">再按一次退出</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_message_loading_data">正在加载数据，请稍等!</string>
    <string name="scan_code">二维码扫描</string>
    <string name="scan_failed">扫描失败</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="pull_up_to_enter_tv">上拉进入首页</string>
    <string name="look_tv">查看</string>
    <string name="register_failed">注册失败&#058;</string>
    <string name="register_success">注册成功</string>
    <string name="network_timeout">服务器连接超时</string>
    <string name="network_connect_failed">服务器连接失败</string>
    <string name="network_not_response">服务器无响应&#044;请稍后再试</string>
    <string name="buzzer_on">蜂鸣器开启</string>
    <string name="buzzer_off">蜂鸣器关闭</string>
    <string name="operate_success">操作成功</string>
    <string name="operate_failed">操作失败</string>
    <string name="commit_failure">提交失败:</string>
    <string name="save_picture_failed">图片保存失败</string>
    <string name="sd_card_unmounted">SD卡已卸载或不存在</string>
    <string name="refuse_upload_file">服务器拒绝上传该文件</string>
    <string name="send_success">发送成功</string>
    <string name="logining">正在登录</string>
    <string name="registering">正在注册</string>
    <string name="please_login">请登录后再操作</string>
    <string name="no_rights_to_upload_picture">权限不足,无法上传图片到云相册</string>
    <string name="low_memory">磁盘空间不够,无法上传图片到云相册</string>
    <string name="mistake_type">客户端数据格式错误,请联系客服人员</string>
    <string name="receive_mistake_info">服务器返回信息有误</string>
    <string name="success_delete_device">已删除绑定设备</string>
    <string name="failed_delete_device">删除绑定设备失败</string>
    <string name="dialog_delete_photo">确定删除该图片?</string>
    <string name="upload_data">正在提交信息</string>
    <string name="change_device_failed">终端切换失败</string>
    <string name="login_failed">登录失败&#058;</string>
    <string name="user_auth_suceess">认证成功</string>
    <string name="user_auth_fail">认证失败</string>
    <string name="user_auth_cancel">取消认证</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败，请检查网络连接。出错信息：</string>
    <string name="weibosdk_error_repeat_content">提交相同的信息</string>
    <string name="weibo_content">&#034;家庭卫士&#034;&#044;你的生活好帮手&#046;</string>
    <string name="picture_is_not_exist">图片不存在&#044;无法分享</string>
    <string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
	<string name="errcode_no_image">分享图片不存在</string>
    <string name="score">积分</string>
    <string name="grade">等级</string>
    <string name="defence">布防</string>
    <string name="cancel_defence">撤防</string>
    <string name="keep_in_voice">语音通话中&#046;&#046;&#046;</string>
    <string name="alarm_info">家庭卫士报警信息</string>
    <string name="father">爸爸</string>
    <string name="mother">妈妈</string>
    <string name="son">儿子</string>
    <string name="daughter">女儿</string>
    <string name="unit_zhang">张</string>
    <string name="cloud_eyes">云&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;眼</string>
    <string name="imprinting">印&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;记</string>
    <string name="cloud_photo_album">云&#160;&#160;相&#160;&#160;册</string>
    <string name="smart_app">慧&#160;&#160;应&#160;&#160;用</string>
    <string name="title_cloud_photo_album">云相册</string>
    <string name="title_smart_app">慧应用</string>
    <string name="self_center">个人中心</string>
    <string name="access_records">出入记录</string>
    <string name="defence_records">安防记录</string>
    <string name="warning_records">报警记录</string>
    <string name="remote_control">远程控制</string>
    <string name="service_center">服务中心</string>
    <string name="community_area">慧社区</string>
    <string name="business_service">商业服务</string>
    <string name="sunshine_government_affairs">阳光政务</string>
    <string name="download">下载</string>
    <string name="already_download">已下载</string>
    <string name="start_app">启动</string>
    <string name="upload_feedback_info">正在提交反馈信息</string>
    <string name="all">全部</string>
    <string name="intrude">闯入</string>
    <string name="temperature">温度</string>
    <string name="capture">抓拍</string>
    <string name="voice">声音</string>
    <string name="temperature_abnormal">温度异常</string>
    <string name="indoor_temperature">室内温度</string>
    <string name="indoor">室内&#160;</string>
    <string name="thirty_minutes_temperature_trend">30分钟室内温度如图&#058;</string>
    <string name="current_temperature">当前温度&#160;&#058;&#160;</string>
    <string name="out_door">出门</string>
    <string name="at_home">回家</string>
    <string name="invade">入侵</string>
    <string name="alarm_time">报警时间</string>
    <string name="setting_success">设置成功</string>
    <string name="setting_failed">设置成功</string>
    <string name="the_first_picture">这已经是第一张图片</string>
    <string name="the_last_picture">这已经是最后一张图片</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="tencent_weibo">腾讯微博</string>
    <string name="cycle_of_friends">朋&#160;&#160;友&#160;&#160;圈</string>
    <string name="phone">手机号码&#160;&#058;&#160;</string>
    <string name="nickname">昵称&#160;&#058;&#160;</string>
    <string name="emergency_contacts">紧急联系&#160;&#058;&#160;</string>
    <string name="credits_exchange">积分兑换</string>
    <string name="password_setting">密码设置</string>
    <string name="new_or_maintain_address">地址新建&#047;维护</string>
    <string name="maintain_rfid_card">RFID卡维护</string>
    <string name="camera_setting">摄像机设置</string>
    <string name="cloud_eyes_setting">云眼设置</string>
    <string name="alarm_push_message">报警推送信息</string>
    <string name="back_home_remind_message">归家提醒信息</string>
    <string name="remind_defence_or_cancel">布防撤防提醒</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="cloud_mall">云商城</string>
    <string name="turn_on">开</string>
    <string name="turn_off">关</string>
    <string name="confirm_modification">确认修改</string>
    <string name="old_password">旧密码&#160;&#058;&#160;</string>
    <string name="new_password">新密码&#160;&#058;&#160;</string>
    <string name="confirm_new_password">新密码确认&#160;&#058;&#160;</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_confirm_password">请输入确认密码</string>
    <string name="prompt_input_new_password">请输入新密码</string>
    <string name="prompt_input_mistake_password">密码输入错误</string>
    <string name="prompt_input_new_password_again">请再次输入新密码</string>
    <string name="prompt_input_diffrient_password">两次输入的密码不一致，请重新输入</string>
    <string name="prompt_input_phone">请输入手机号码</string>
    <string name="manage_address">地址管理</string>
    <string name="device_number">设备号</string>
    <string name="auth_code">验证码</string>
    <string name="address">地址</string>
    <string name="device_number_with_colon">设备号&#160;&#058;&#160;</string>
    <string name="auth_code_with_colon">验证码&#160;&#058;&#160;</string>
    <string name="address_with_colon">地&#160;&#160;&#160;&#160;址&#160;&#058;&#160;</string>
    <string name="submit">提交</string>
    <string name="add_address">添加地址</string>
    <string name="hint_input_address">请输入地址</string>
    <string name="hint_input_device_code">请输入或扫描设备号</string>
    <string name="hint_input_auth_code">请输入验证码</string>
    <string name="manage_rfid_card">RFID卡管理</string>
    <string name="safe_gesture">安全手势</string>
    <string name="set_safe_gesture">安全手势设置</string>
    <string name="modify_safe_gesture">修改安全手势</string>
    <string name="video_quality">视频质量</string>
    <string name="times_capture">定时抓拍</string>
    <string name="capture_numbers">抓拍张数</string>
    <string name="timing_set_time">定时时间设置</string>
    <string name="send_feedback">发送反馈</string>
    <string name="feedback_advice">反馈意见</string>
    <string name="hint_input_feedback_advice">请输入反馈意见&#046;&#046;&#046;</string>
    <string name="upload_head_portrait">上传头像&#160;&#058;&#160;</string>
    <string name="name">名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称&#160;&#058;&#160;</string>
    <string name="rfid_card">R&#160;F&#160;I&#160;D&#160;卡&#160;&#058;&#160;</string>
    <string name="name1">名称&#160;&#058;&#160;</string>
    <string name="rfid_card1">RFID卡&#160;&#058;&#160;</string>
    <string name="take_photos">手机拍照</string>
    <string name="local_photos">本地图片</string>
    <string name="cancel">取&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;消</string>
    <string name="it_is_not_a_valid_picture">您选择的不是有效的图片</string>
    <string name="the_picture_is_not_exist">您选择的图片不存在</string>
    <string name="video_quality_rank">适中</string>
    <string name="capture_two_picture">三张</string>
    <string name="ten_seconds">10s</string>
    <string name="hint_capture_timing">10&#058;30</string>
    <string name="only_open_medium_video_quality">视频质量目前只开通中等清晰功能</string>
    <string name="clearing_cache">正在清除缓存</string>
    <string name="clear_all_cache">缓存已全部清除</string>
    <string name="clear_cache_failure">清除失败</string>
    <string name="delete_member">删除成员&#058;</string>
    <string name="delete_address">删除地址&#058;</string>
    <string name="draw_gesture">绘制视频查看解锁图案</string>
    <string name="draw_gesture_again">再次绘制视频查看解锁图案</string>
    <string name="set_gesture_success">手势设置成功</string>
    <string name="set_gesture_failure">手势设置失败</string>
    <string name="different_gestrue">手势图案不一致&#044;请重新设置</string>
    <string name="gesture_short">手势图案密码太短&#044;请重新设置</string>
    <string name="draw_current_safe_gesture">请绘制当前解锁图案</string>
    <string name="unlock_failure">解锁失败</string>
    <string name="change_default_address">切换默认地址为&#058;</string>
    <string name="add_address_success">新地址添加成功</string>
    <string name="this_function_not_open">此功能暂未开通</string>
    <string name="phone_number">手机号&#160;&#058;&#160;</string>
    <string name="phone_number1">手&#160;&#160;机&#160;&#160;号&#160;&#058;&#160;</string>
    <string name="password">密&#160;&#160;&#160;&#160;码&#160;&#058;&#160;</string>
    <string name="password1">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码&#160;&#058;&#160;</string>
    <string name="dial_to_find_password">一键拨打密码找回</string>
    <string name="network_setting">网络设置</string>
    <string name="chose_wifi">选择WIFI&#160;&#058;&#160;</string>
    <string name="hint_input_phone_number">请输入手机号码</string>
    <string name="nickname1">昵&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称&#160;&#058;&#160;</string>
    <string name="hint_input_nickname">请输入昵称</string>
    <string name="confirm_password">密码确认&#160;&#058;&#160;</string>
    <string name="family_address">住&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址&#160;&#058;&#160;</string>
    <string name="hint_serious_fill_the_info">&#040;请认真填写&#044;以便以后找回密码&#041;</string>
    <string name="device_number_with_colon1">设&#160;&#160;备&#160;&#160;号&#160;&#058;&#160;</string>
    <string name="auth_code_with_colon1">验&#160;&#160;证&#160;&#160;码&#160;&#058;&#160;</string>
</resources>