<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_title_bar" >
        <ImageView 
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/back_iv"
            android:contentDescription="@null" />
        <TextView 
            android:id="@+id/confirm_modification_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/confirm_modification"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_20" />
    </RelativeLayout>
    
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp" >
        <TableRow >
            <TextView 
                android:gravity="right"
                android:text="@string/old_password"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_20" />
            <EditText 
                android:id="@+id/old_password_et"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:hint="@string/hint_input_password"
                android:background="@drawable/bg_table_one_row" />
        </TableRow>
        <TableRow 
            android:layout_marginTop="15dp">
            <TextView 
                android:gravity="right"
                android:text="@string/new_password"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_20" />
            <EditText 
                android:id="@+id/new_password_et"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:hint="@string/hint_input_password"
                android:background="@drawable/bg_table_one_row" />
        </TableRow>
        <TableRow 
            android:layout_marginTop="15dp">
            <TextView 
                android:text="@string/confirm_new_password"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_20" />
            <EditText 
                android:id="@+id/confirm_new_password_et"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:hint="@string/hint_input_password"
                android:background="@drawable/bg_table_one_row" />
        </TableRow>
    </TableLayout>
    
    <ProgressBar 
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
    
</LinearLayout>
